# fr-lio

./: .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  DEGENERATE_EXPERIMENT.md  FUTURE_IMPROVEMENTS.md  ICUAS_ROADMAP.md  LONG_CORRIDOR_RESULTS.md  MASTER_THESIS.md  OUTDOORS_EXPERIMENT.md  PAPER.md  RAL_PAPER.md  RAL_ROADMAP.md  README.md  REALTIME_ENGINEERING_PLAN.md  SCAN_TO_SCAN_DERIVATION_PLAN.md  SCAN_TO_SCAN_VALIDATION_RESULTS.md  THESIS_CONTRIBUTIONS.md  THESIS_CONTRIBUTIONS_V2.md  chapter_fej_iekf.tex  chapter_flight_ready.tex  deps.repos  package.xml  pixi.toml
.github/workflows/: ci.yml
config/: indoors.yaml  indoors_baseline.yaml  mid360.yaml  outdoors.yaml  outdoors_baseline.yaml
include/: common_lib.h  lc_keyframe_db.hpp  lc_worker.hpp  map_correction.hpp  so3_math.h  use-ikfom.hpp
include/IKFoM_toolkit/esekfom/: esekfom.hpp
include/fr_lio/: common_lib.hpp  lc_keyframe_db.hpp  lc_worker.hpp  map_correction.hpp  so3_math.hpp  use_ikfom.hpp
launch/: lio.launch.py  mapping.launch.py  mapping_custom.launch.py
rviz/: fastlio.rviz
scripts/: exp1_baseline.py  exp_lc.py  exp_run.py  pyproject.toml  sim_adaptive_floored_ekf.py  sim_augmented_state.py  sim_bcv_estimator.py  sim_bias_online.py  sim_biased_crlb.py  sim_biased_crlb_3dof.py  sim_cube_circle_compare.py  sim_dual_filter.py  sim_empirical_edge_noise.py  sim_environment_3d.py  sim_falselc_robustness.py  sim_iekf_3d.py  sim_imsc_eskf_accuracy.py  sim_imu_trajectory.py  sim_map_correction.py  sim_msc_eskf.py  sim_pcrb_shadow.py  sim_perpoint_diagnosis.py  sim_pose_drift_estimator.py  sim_posegraph_crlb.py  sim_recursive_pcrb.py  sim_room_corridor_compare.py  sim_square_corridor_compare.py  sim_square_corridor_fixed_lc.py  sim_square_corridor_no_lc.py
src/: imu_processing.hpp  laserMapping.cpp  laser_mapping.cpp  lidar_accumulator.cpp  mocap_converter.cpp  preprocess.cpp  preprocess.h  preprocess.hpp
test/: test_map_correction.cpp
