<?xml version="1.0"?>
<package format="3">
  <name>fr_lio</name>
  <version>0.1.0</version>

  <description>Drift-aware FAST-LIO for flight-ready LiDAR-inertial odometry</description>

  <maintainer email="alvgaona@gmail.com">Alvaro J. Gaona</maintainer>
  <author email="alvgaona@gmail.com">Alvaro J. Gaona</author>

  <license>GPL-2.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
