[project]
authors = [{name = "Alvaro Gaona", email = "alvgaona@gmail.com"}]
dependencies = []
name = "scripts"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
scripts = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.3,<3"
scipy = ">=1.17.1,<2"
matplotlib = ">=3.10.8,<4"
